--- a/flixster/Base.lproj/Main.storyboard
+++ b/flixster/Base.lproj/Main.storyboard
@@ -27,26 +27,43 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5ri-H7-mtm">
-                                                    <rect key="frame" x="20" y="6" width="90" height="117"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMA-3U-KYX">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMA-3U-KYX">
                                                     <rect key="frame" x="118" y="40" width="288" height="78"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="288" id="MW3-4W-UwY"/>
+                                                        <constraint firstAttribute="height" constant="78" id="m3B-3J-9NU"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2d-e6-eYh">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2d-e6-eYh">
                                                     <rect key="frame" x="118" y="6" width="288" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="eQp-6m-KgL"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5ri-H7-mtm">
+                                                    <rect key="frame" x="12" y="14" width="90" height="117"/>
+                                                    <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="117" id="LrV-6d-d58"/>
+                                                        <constraint firstAttribute="width" constant="90" id="MER-0j-hmr"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="bMA-3U-KYX" firstAttribute="leading" secondItem="5ri-H7-mtm" secondAttribute="trailing" constant="10" id="4fg-A5-cXR"/>
+                                                <constraint firstItem="j2d-e6-eYh" firstAttribute="trailing" secondItem="3E8-3c-Xjg" secondAttribute="trailingMargin" constant="8" id="E9F-wv-bTc"/>
+                                                <constraint firstItem="5ri-H7-mtm" firstAttribute="top" secondItem="3E8-3c-Xjg" secondAttribute="topMargin" constant="3" id="XMC-cH-m1S"/>
+                                                <constraint firstItem="5ri-H7-mtm" firstAttribute="leading" secondItem="3E8-3c-Xjg" secondAttribute="leadingMargin" constant="5" id="Yqg-SV-szK"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="bMA-3U-KYX" secondAttribute="bottom" constant="5" id="ef3-GW-o3C"/>
+                                                <constraint firstItem="j2d-e6-eYh" firstAttribute="leading" secondItem="5ri-H7-mtm" secondAttribute="trailing" constant="16" id="jfR-qO-05x"/>
+                                                <constraint firstItem="bMA-3U-KYX" firstAttribute="top" secondItem="j2d-e6-eYh" secondAttribute="bottom" constant="13" id="k1Z-CH-E5E"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="posterView" destination="5ri-H7-mtm" id="epT-CT-bno"/>
