--- a/flixster/Base.lproj/Main.storyboard
+++ b/flixster/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AgN-3Y-GCt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Qv-lX-kgo">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -69,6 +69,7 @@
                                             <outlet property="posterView" destination="5ri-H7-mtm" id="epT-CT-bno"/>
                                             <outlet property="synopsisLabel" destination="bMA-3U-KYX" id="rof-Dj-EAg"/>
                                             <outlet property="titleLabel" destination="j2d-e6-eYh" id="EgC-2y-NQ2"/>
+                                            <segue destination="gBP-Cm-TEp" kind="show" id="i3e-ff-LrG"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -84,12 +85,77 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1044.9275362318842" y="120.65217391304348"/>
+            <point key="canvasLocation" x="-1359" y="938"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Movie Details View Controller-->
+        <scene sceneID="2AQ-u9-ckM">
+            <objects>
+                <viewController id="gBP-Cm-TEp" customClass="MovieDetailsViewController" customModule="flixster" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Ua-S0-OLE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mD4-eI-aNq">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="314"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PIb-i8-Ij4">
+                                <rect key="frame" x="12" y="234" width="111" height="147"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qh-wI-YaQ">
+                                <rect key="frame" x="12" y="401" width="382" height="112"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rLB-yB-gH9">
+                                <rect key="frame" x="131" y="331" width="263" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="5v1-jC-mZs"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="YCH-My-b73"/>
+                    <connections>
+                        <outlet property="backdropView" destination="mD4-eI-aNq" id="dok-nZ-gPt"/>
+                        <outlet property="posterView" destination="PIb-i8-Ij4" id="R5D-nD-9qw"/>
+                        <outlet property="synopsisLabel" destination="7qh-wI-YaQ" id="p53-vS-u7n"/>
+                        <outlet property="titleLabel" destination="rLB-yB-gH9" id="ReJ-IX-0W0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zmr-Xu-ayd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1359" y="1679"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="GNk-VK-jAL">
+            <objects>
+                <tabBarController id="4Qv-lX-kgo" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rdo-8X-Q81">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="AgN-3Y-GCt" kind="relationship" relationship="viewControllers" id="Zht-05-yW2"/>
+                        <segue destination="fLK-pW-mlx" kind="relationship" relationship="viewControllers" id="Hf5-Iz-HhI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6L9-LH-XZj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-809" y="-596"/>
+        </scene>
+        <!--Now Playing-->
         <scene sceneID="Eyl-xc-hJD">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AgN-3Y-GCt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Now Playing" image="now_playing_tabbar_item" id="Ybk-Z8-LuZ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="H76-aV-obr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -102,7 +168,46 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TcG-8i-GrP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="120.65217391304348"/>
+            <point key="canvasLocation" x="-1357" y="169"/>
+        </scene>
+        <!--Superhero-->
+        <scene sceneID="0FQ-c2-bYG">
+            <objects>
+                <viewController id="xgf-Gc-iKL" customClass="MovieGridViewController" customModule="flixster" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uf8-X8-3fo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="vSj-yw-cxB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Superhero" id="eha-4h-EHz"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xo0-GO-u7F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-232" y="938"/>
+        </scene>
+        <!--Superhero-->
+        <scene sceneID="Uu6-Dg-hfe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fLK-pW-mlx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Superhero" image="superhero_tabbar_item" id="IQK-eJ-35j"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aLN-YH-2JD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xgf-Gc-iKL" kind="relationship" relationship="rootViewController" id="g5h-Sr-ije"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rha-Lq-6tY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-231.8840579710145" y="176.9021739130435"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="now_playing_tabbar_item" width="21" height="21"/>
+        <image name="superhero_tabbar_item" width="21" height="23"/>
+    </resources>
 </document>
